IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/13/12: Fixed Vmstopy to convert backslash to / for Windows.

2/13/12: Fixed Vmstopy initial scanning for goto, etc, in files with DOS 
line endings in Cygwin.

2/8/12: Changed Vmstopy to remove spaces between $ and command when there are
no Python statements in a command file, to avoid indentation errors.

2/7/12: Fixed Setupcombine problem when there is only one number in SHIFT
entry in tilt.com.

2/7/12: IMOD_4-3-5
2/2/12: Fixed ctfplotter to link against the libtiff distributed in package
(In 4.3).

2/2/12: In eTomo changed the pixel size in ctfcorrection.com to take the
binning of the aligned stack into account.(Bug# 1594)

2/1/12: IMOD_4-4-4
2/1/12: Fixed crash from failure to clear vertex buffers when model view is
closed.

2/1/12: Increased limit on number of views for tiltalign and beadtrack to
1440.

1/31/12: Finished the eTomo - PEET interface upgrade.(Bug# 1592)

1/27/12: Added a Python script startprocess to run jobs in background for
eTomo.

1/25/12: Made all Qt-based programs reset the locale after starting the
Qt application to prevent errors reading floating point numbers (In 4.3).

1/25/12: Made Midas able to read files with DOS line endings on other systems.

1/25/12: In eTomo - PEET - Reference, converted the  multi-particle  reference
fields to a single combo-box.(Bug# 1592)

1/24/12: In eTomo, finished implementing the --actions parameter (causes
messages documenting eTomo actions to be printed).(Bug# 1441)

1/19/12: Fixed problem with trying to do more than 50000 peaks in Findbeads3d.

1/19/12: In eTomo - PEET, setting nWeightGroup to 0 in the .prm file when the
'Weight groups' spinner is off in the dialog.(Bug# 1589)

1/18/12: In eTomo - PEET, defaulted low cutoff sigma.(Bug# 1588)

1/18/12: In eTomo - PEET, added a startup popup.(Bug# 1585)

1/18/12: In eTomo - PEET, avoiding the problems caused by entering a "." for